--- a/apps/rickandroll-web/src/styles.scss
+++ b/apps/rickandroll-web/src/styles.scss
@@ -62,6 +62,11 @@ section {
           text-transform: uppercase;
         }
 
+        select {
+          padding: 1rem;
+          font-weight: 700;
+        }
+
         .result {
           color: $white;
           font-size: 1.5rem;
