fix: img assets url update

--- a/libs/common-defintions/src/lib/styles.scss
+++ b/libs/common-defintions/src/lib/styles.scss
@@ -18,7 +18,7 @@ section {
   &.section {
     &--hero {
       background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-        url('./assets/Rick-Astley-Never-Gonna-Give-You-Up.png');
+        url('assets/Rick-Astley-Never-Gonna-Give-You-Up.png');
       height: 600px;
       background-repeat: no-repeat;
       background-size: cover;
